--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "karma:bundle": "yarn webpack && cross-env TEST_ENV=bundle karma start",
     "karma:window": "yarn webpack && cross-env TEST_ENV=window karma start",
     "tsc": "tsc --build ./tsconfig.json",
-    "webpack": "webpack --mode development --config webpack.dev.js",
     "html": "yarn webpack && yarn html:source && yarn html:bundle && yarn html:window",
     "html:source": "cross-env TEST_ENV=source NODE_ENV=html yarn webpack",
     "html:bundle": "cross-env TEST_ENV=bundle NODE_ENV=html yarn webpack",
     "html:window": "cross-env TEST_ENV=window NODE_ENV=html yarn webpack",
-    "build": "yarn tsc && yarn webpack",
+    "webpack": "webpack --mode development --config webpack.dev.js",
+    "webpack:prod": "cross-env NODE_ENV=production webpack --optimize-minimize --mode production --config webpack.prod.js",
+    "build": "rm -rf ./dist && cross-env NODE_ENV=production yarn tsc && yarn webpack:prod",
+    "analyze": "cross-env NODE_ENV=production webpack --mode production --optimize-minimize --json --config webpack.prod.js | webpack-bundle-size-analyzer",
     "cleanup": "rm -rf ./dist coverage .nyc_output ./node_modules ./test/html/*.bundle.js ./test/html/test.html"
   },
   "author": "Jun Kurihara",
   "license": "MIT",
   "devDependencies": {
-<<<<<<< HEAD
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.15",
@@ -31,7 +32,6 @@
     "karma": "3.1.3",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
-    "karma-coverage": "1.1.2",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
     "karma-webpack": "3.0.5",
@@ -44,20 +44,8 @@
     "typescript": "^3.2.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
+    "webpack-common-shake": "^2.1.0",
     "webpack-merge": "^4.1.5"
-=======
-    "@types/chai": "4.1.7",
-    "@types/mocha": "5.2.5",
-    "chai": "4.2.0",
-    "mocha": "5.2.0",
-    "nyc": "13.1.0",
-    "source-map-support": "0.5.9",
-    "ts-loader": "5.3.1",
-    "ts-node": "7.0.1",
-    "typescript": "3.2.2",
-    "webpack": "4.27.1",
-    "webpack-cli": "3.1.2"
->>>>>>> 4a3efbb8ffe2a4dc1618a55ee5b51b821aa2cf50
   },
   "dependencies": {}
 }
