--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/chai": "4.1.7",
     "@types/mocha": "5.2.5",
     "@types/node": "10.12.18",
+    "@types/bn.js": "^4.11.3",
     "chai": "4.2.0",
     "cross-env": "5.2.0",
     "jsdom": "13.1.0",
@@ -50,6 +51,7 @@
   },
   "dependencies": {
     "bn.js": "^4.11.8",
+    "js-crypto-env": "^0.1.1",
     "js-encoding-utils": "^0.3.1"
   }
 }
