--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
   "author": "Jun Kurihara",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "4.1.7",
-    "@types/mocha": "5.2.6",
-    "@types/node": "10.14.6",
     "@types/bn.js": "4.11.5",
+    "@types/chai": "4.1.7",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "10.14.6",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
     "chai": "4.2.0",
     "cross-env": "5.2.0",
+    "eslint": "^5.16.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "15.1.0",
     "karma": "4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "2.0.0",
+    "karma-coverage": "^1.1.2",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
     "karma-webpack": "3.0.5",
@@ -42,7 +47,6 @@
     "source-map-support": "0.5.12",
     "ts-loader": "6.0.0",
     "ts-node": "8.1.0",
-    "tslint": "5.16.0",
     "typescript": "3.4.5",
     "webpack": "4.31.0",
     "webpack-cli": "3.3.2",
