--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
-    "bn.js": "^5.0.0",
-    "js-crypto-env": "^0.2.0",
-    "js-encoding-utils": "^0.5.0"
+    "bn.js": "5.0.0",
+    "js-crypto-env": "0.2.4",
+    "js-encoding-utils": "0.5.4"
   }
 }
