--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "author": "Jun Kurihara",
   "license": "MIT",
   "devDependencies": {
-    "@types/bn.js": "4.11.5",
     "@types/chai": "4.2.4",
     "@types/mocha": "5.2.7",
     "@types/node": "10.17.5",
@@ -53,9 +52,5 @@
     "webpack-common-shake": "2.1.0",
     "webpack-merge": "4.2.2"
   },
-  "dependencies": {
-    "bn.js": "5.0.0",
-    "js-crypto-env": "0.2.4",
-    "js-encoding-utils": "0.5.4"
-  }
+  "dependencies": {}
 }
