--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+orbs:
+  codecov: codecov/codecov@1.0.5
+
 jobs:
   build:
     docker:
@@ -43,6 +46,11 @@ jobs:
       - run: yarn test
 
       - run: yarn karma
+
+      - run: sudo apt install lcov
+      - run: find ./coverage  -name lcov.info -exec echo -a {} \; | xargs lcov -o ./coverage/merged-lcov.info
+      - codecov/upload:
+          file: ./coverage/merged-lcov.info
 
       - store_artifacts:
           path: ./coverage
