--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "scripts": {
     "test": "nyc mocha --recursive $(find test -name '*.spec.ts')",
     "test:bundle": "yarn webpack && cross-env TEST_ENV=bundle yarn test",
-    "karma": "cross-env TEST_ENV=source ./node_modules/.bin/karma start",
-    "karma:bundle": "yarn webpack && cross-env TEST_ENV=bundle karma start",
-    "karma:window": "yarn webpack && cross-env TEST_ENV=window karma start",
+    "karma": "rm ./test/html/*.bundle.js; yarn html:source && cross-env TEST_ENV=source ./node_modules/.bin/karma start",
+    "karma:bundle": "rm ./test/html/*.bundle.js; yarn html:bundle && yarn webpack && cross-env TEST_ENV=bundle karma start",
+    "karma:window": "rm ./test/html/*.bundle.js; yarn html:window && yarn webpack && cross-env TEST_ENV=window karma start",
     "tsc": "tsc --build ./tsconfig.json",
     "html": "yarn webpack && yarn html:source && yarn html:bundle && yarn html:window",
     "html:source": "cross-env TEST_ENV=source NODE_ENV=html yarn webpack",
     "html:bundle": "cross-env TEST_ENV=bundle NODE_ENV=html yarn webpack",
     "html:window": "cross-env TEST_ENV=window NODE_ENV=html yarn webpack",
     "webpack": "webpack --mode development --config webpack.dev.js",
-    "webpack:prod": "cross-env NODE_ENV=production webpack --optimize-minimize --mode production --config webpack.prod.js",
+    "webpack:prod": "cross-env NODE_ENV=production webpack --mode production --config webpack.prod.js",
     "build": "rm -rf ./dist && cross-env NODE_ENV=production yarn tsc && yarn webpack:prod",
-    "analyze": "cross-env NODE_ENV=production webpack --mode production --optimize-minimize --json --config webpack.prod.js | webpack-bundle-size-analyzer",
+    "analyze": "cross-env NODE_ENV=production webpack --mode production --json --config webpack.prod.js | webpack-bundle-size-analyzer",
     "cleanup": "rm -rf ./dist coverage .nyc_output ./node_modules ./test/html/*.bundle.js ./test/html/test.html"
   },
   "author": "Jun Kurihara",
@@ -37,21 +37,21 @@
     "karma": "5.2.3",
     "karma-chrome-launcher": "3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-coverage": "^2.0.3",
     "karma-mocha": "2.0.1",
     "karma-mocha-reporter": "2.2.5",
+    "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.8",
-    "karma-webpack": "4.0.2",
     "mocha": "8.1.3",
     "mocha-sinon": "2.1.2",
     "nyc": "15.1.0",
+    "path-browserify": "1.0.1",
     "source-map-support": "0.5.19",
     "ts-loader": "8.0.4",
     "ts-node": "9.0.0",
     "typescript": "4.0.3",
-    "webpack": "4.44.2",
+    "webpack": "5.0.0",
     "webpack-cli": "4.0.0",
-    "webpack-common-shake": "2.1.0",
     "webpack-merge": "5.2.0"
   },
   "dependencies": {}
