--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ defaults: &defaults
   docker:
     # specify the version you desire here
     - image: circleci/node:lts-browsers
+      auth:
+        username: $DOCKERHUB_USER
+        password: $DOCKERHUB_TOKEN
 
     # Specify service dependencies here if necessary
     # CircleCI maintains a library of pre-built images
@@ -56,6 +59,8 @@ workflows:
   test-publish:
     jobs:
       - test:
+          context:
+            - docker-hub-creds
           filters:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*/
