--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ workflows:
     jobs:
       - test:
           context:
-            - docker-hub-creds
+            - docker-hub-cred
           filters:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*/
