--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -22,20 +22,20 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 14.x, 15.x]
+        node-version: [ 14.x, 15.x ]
 
-      steps:
-        - uses: actions/checkout@v2
-        - name: Use Node.js ${{ matrix.node-version }}
-          uses: actions/setup-node@v2
-          with:
-            node-version: ${{ matrix.node-version }}
-        - run: npm i -g npm
-        - run: npm i -g yarn
-        - run: yarn install
-        - run: yarn test
-
-
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm i -g npm
+      - run: npm i -g yarn
+      - run: yarn install
+#        - run: yarn test
+#
+#
 #    # Steps represent a sequence of tasks that will be executed as part of the job
 #    steps:
 #      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
