--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,14 @@ defaults: &defaults
 
 orbs:
   codecov: codecov/codecov@1.1.4
+  browser-tools: circleci/browser-tools@1.1.0
 
 jobs:
   test:
     <<: *defaults
     steps:
+      - browser-tools/install-browser-tools
+      
       - checkout
 
       - run:
