--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       # run tests!
       - run: yarn test
       - run: yarn karma
-      - run: sudo apt install lcov
+      - run: sudo apt update && sudo apt install lcov
       - run: find ./coverage  -name lcov.info -exec echo -a {} \; | xargs lcov -o ./coverage/merged-lcov.info
       - codecov/upload:
           file: ./coverage/merged-lcov.info
