--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
 
       # run tests!
       - run: yarn test
-      - run: yarn karma
+      - run: yarn test:web
       - run: sudo apt update && sudo apt install lcov
       - run: find ./coverage  -name lcov.info -exec echo -a {} \; | xargs lcov -o ./coverage/merged-lcov.info
       - codecov/upload:
@@ -68,4 +68,3 @@ workflows:
           filters:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*/
-
