--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "analyze": "cem analyze --litelement",
-    "build": "rm -rf dist && tsc && yarn webpack:prod && npm run analyze -- --exclude dist",
+    "build": "rm -rf dist && tsc && rpm run webpack:prod && npm run analyze -- --exclude dist",
     "test": "nyc mocha \"test/**/*.ts\"",
     "test:web": "tsc -p ./tsconfig.wtr.json && wtr --coverage",
     "webpack": "webpack --mode development --config webpack.config.js",
@@ -37,8 +37,7 @@
     "ts-node": "10.4.0",
     "typescript": "4.5.2",
     "webpack": "5.65.0",
-    "webpack-cli": "4.9.1",
-    "yarn": "1.22.17"
+    "webpack-cli": "4.9.1"
   },
   "dependencies": {},
   "nyc": {
