--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -6,9 +6,9 @@ name: test
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
-    branches: [ develop ]
+    branches: [develop]
   pull_request:
-    branches: [ develop ]
+    branches: [develop]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 18.x, 19.x ]
+        node-version: [18.x, 19.x]
 
     steps:
       - uses: actions/checkout@v3
@@ -57,6 +57,15 @@ jobs:
           yarn add --dev @types/estree
           yarn test:web
 
+      - name: Install lcov and merge coverage info
+        run: |
+          sudo apt install lcov
+          find ./coverage  -name lcov.info -exec echo -a {} \; | xargs lcov -o ./coverage/merged-lcov.info
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/merged-lcov.info
 #      - name: Install lcov
 #        run: sudo apt install lcov
 #    # Steps represent a sequence of tasks that will be executed as part of the job
