--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "license": "MIT",
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "0.8.4",
-    "@open-wc/testing": "next",
+    "@open-wc/testing": "3.2.0",
     "@types/chai": "4.3.5",
     "@types/mocha": "10.0.1",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
-    "@web/test-runner": "next",
+    "@web/test-runner": "0.17.1",
     "chai": "4.3.8",
     "eslint": "8.48.0",
     "mocha": "10.2.0",
