--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@types/mocha": "10.0.6",
     "@typescript-eslint/eslint-plugin": "6.12.0",
     "@typescript-eslint/parser": "6.12.0",
-    "@web/dev-server-esbuild": "^1.0.1",
+    "@web/dev-server-esbuild": "1.0.1",
     "@web/test-runner": "0.18.0",
-    "chai": "4.3.10",
+    "chai": "4.4.0",
     "eslint": "8.54.0",
     "mocha": "10.2.0",
     "nyc": "15.1.0",
